# ATANOR-Demo

./: .env.example  .gitattributes  .gitignore  .vercelignore  ATANOR_PRD.md  CONTEXT_CAPSULE.md  CONTRIBUTING.md  Dockerfile.python-core  HANDOFF_CLAUDE.md  HANDOFF_CLAUDE_CODE.md  HANDOFF_CODEX.md  LICENSE  PROJECT_STATE.md  QUICKSTART.md  README.md  SECURITY.md  SESSION_LOG.md  SYNC.md  TASK_BOARD.md  design-qa.md  package-lock.json  package.json
.claude/: launch.json
apps/: __init__.py
assets/: README_LOGO.txt
business/: BUSINESS_LOG.md  TEAM.md
deploy/: .env.example  CLOUDFLARE_SETUP.md  Caddyfile  Dockerfile  README.md  UPDATE_DEPLOY.md  docker-compose.yml  requirements-cloud.txt  requirements-voice.txt  setup-vm.sh
docs/: ARCHITECTURE.md  ATANOR_ALPHA_FREEZE_REPORT.md  ATANOR_ATLAS.md  ATANOR_AWS_CLOUD_BRAIN_BROKER.md  ATANOR_AWS_VS_CLOUDFLARE.md  ATANOR_BENCHMARK_COMPARISON.md  ATANOR_BROWSER_SHELL_CONTRACT.md  ATANOR_BROWSER_SPEC.md  ATANOR_CLOUDFLARE_BROKER_OPTION.md  ATANOR_CLOUD_BRAIN_COST_MODEL.md  ATANOR_CLOUD_BRAIN_REAL_ARCHITECTURE.md  ATANOR_CONTRIBUTOR_NODE_ALPHA.md  ATANOR_DISTRIBUTED_COMPUTE_VISION.md  ATANOR_ENERGY_EFFICIENCY.md  ATANOR_FOOTPRINT.md  ATANOR_GLOBAL_CONTRIBUTOR_RUNTIME.md  ATANOR_MANIFESTO.md  (+147 more)
src-tauri/: Cargo.toml  Entitlements.appstore.plist  Entitlements.plist  Info.appstore.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.operator.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign_windows_artifact.ps1
src-tauri/src/: lib.rs  main.rs
(+544 files in other folders)
