[package]
name = "homage-desktop"
version = "0.1.2"
description = "ATANOR desktop shell with a Python FastAPI sidecar"
authors = ["ATANOR"]
edition = "2021"

[lib]
name = "homage_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
time = "=0.3.44"
